# Tyr

./: .clang-format  .clang-tidy  .gitignore  .gitmodules  .typos.toml  CMakeLists.txt  CMakePresets.json  README.md  tyr.code-workspace  vcpkg-configuration.json  vcpkg.json
source/cli/: CMakeLists.txt  app.cpp  app.h  main.cpp  pch.h
source/common/: CMakeLists.txt  pch.h  pch_private.h  services.cpp  services.h  setting.cpp  setting.h
source/common/config/: base.h  common.h  config.cpp  config.h  file.cpp  file.h  network.h  setting.h  soccer.h  vision.h
source/common/debug/: debug.cpp  debug.h
source/common/debugging/: color.h  common_colors.cpp  common_colors.h  debug.cpp  debug.h  draw.h  execution_time.h  hub.cpp  hub.h  log.h  source_location.h  thread_name.h  wrapper.h
source/common/logging/: debug_sink.h  logging.cpp  logging.h  macros.h
source/common/math/: angle.cpp  angle.h  helpers.cpp  helpers.h  linear.cpp  linear.h  median_filter.h  random.cpp  random.h  vec2.h  vec3.h  vector.cpp  vector.h
source/common/network/: address.h  nng_client.cpp  nng_client.h  nng_message.h  nng_server.cpp  nng_server.h  udp_client.cpp  udp_client.h  udp_server.cpp  udp_server.h
source/common/state/: game.h  game_commands.h  referee.h  world.h
source/common/storage/: dumper.cpp  dumper.h  storage.cpp  storage.h
source/common/time/: duration.h  time_point.h  timer.cpp  timer.h
source/common/timer/: timer.cpp  timer.h
source/common/util/: tree.h
source/common/utility/: enum_flags.h
source/gui/: CMakeLists.txt  app.cpp  app.h  main.cpp  pch.h
source/gui/drawing/: FieldRenderer.cpp  FieldRenderer.h  FieldRendererBall.cpp  FieldRendererField.cpp  FieldRendererRaylib.cpp  FieldRendererRaylib.h  FieldRendererRobot.cpp  FieldRendererRobotRaylib.cpp  FireldRendererBallRaylib.cpp  VisualizationRenderer.cpp  VisualizationRenderer.h  VisualizationRendererBall.cpp  VisualizationRendererRobot.cpp  visualization_renderer.cpp  visualization_renderer.h  visualization_renderer_ball.cpp  visualization_renderer_robot.cpp
source/gui/menu/: ConfigMenu.cpp  ConfigMenu.h  config.cpp  config.h  config_menu.cpp  config_menu.h  controller.cpp  controller.h  controller_menu.cpp  controller_menu.h  demo.cpp  demo.h  demo_menu.cpp  demo_menu.h  filter.cpp  filter.h  filter_tab.cpp  footer_menu.cpp  footer_menu.h  log.cpp  log.h  log_menu.cpp  log_menu.h  plot.cpp  plot.h  soccer.cpp  soccer.h  status_bar.cpp  status_bar.h  widget_menu.cpp  widget_menu.h
source/gui/renderer/: ball.cpp  debug.cpp  draw.inl  draw_inl.h  field.cpp  info.cpp  renderer.cpp  renderer.h  renderer_ball.cpp  renderer_debug.cpp  renderer_drawudp.cpp  renderer_robot.cpp  robot.cpp
source/gui/shaders/: raylib_vertex.vs
source/gui/theme/: imgui_theme.cpp  imgui_theme.h
source/gui/utility/: colors.h  scaled_imdrawlist.h  vector_helper.cpp  vector_helper.h
source/referee/: CMakeLists.txt  pch.h  referee.cpp  referee.h
source/sender/: CMakeLists.txt  base.h  command.h  grsim.cpp  grsim.h  hub.h  nrf.cpp  nrf.h  pch.h  sender.cpp  sender.h  simulator.cpp  simulator.h  zmq_robot_sender.cpp  zmq_robot_sender.h
source/sender/protocol/: half.c  half.h  reader.c  reader.h  writer.c  writer.h
source/soccer/: CMakeLists.txt  ai.cpp  ai.h  ai_process.cpp  internal_finalize.cpp  internal_prepare.cpp  internal_process_data.cpp  one_touch_detector.h  pch.h  play_book.cpp  state.h
source/soccer/assignment/: assignment.cpp  cost_attack.cpp  cost_gk.cpp  cost_mark.cpp  cost_static.cpp  create_attack.cpp  create_defs.cpp  create_gk.cpp  create_marks.cpp  create_mids.cpp  create_static.cpp
source/soccer/dss/: dss.cpp  dss.h  parabolic.cpp  parabolic.h  trajectory.cpp  trajectory.h
source/soccer/errt/: errt.cpp  errt.h  obstacle_circle.cpp  set_obstacles.cpp  tree.cpp  tree.h
source/soccer/globals/: field.h  state.h
source/soccer/helpers/: attack_fucking_angle.cpp  ball_is_goaling.cpp  ball_is_goaling.h  ball_prediction.cpp  ball_prediction.h  ball_trajectory.cpp  ball_trajectory.h  calc_is_defending.cpp  calculate_mark_cost.cpp  calculate_opp_threat.cpp  calculate_swicth_to_attacker_score.cpp  calculate_switch_to_attacker_score.cpp  def_ghuz.cpp  field.inl  find_kicker_opp.cpp  find_kicker_opp.h  find_nearest_opp.h  goal_blocked.cpp  manage_att_roles.cpp  mark_manager.cpp  nearest_asshole.cpp  nearest_opp.cpp  one_touch_angle.cpp  one_touch_detector.h  open_angle.cpp  open_angle.h  out_of_field.cpp  robot_check.cpp  shoot_blocked.cpp  strategy_weight.cpp
source/soccer/obstacle/: base.h  circle.h  map.cpp  map.h  obstacle.cpp  obstacle.h  obstacle_circle.cpp  obstacle_map.cpp  obstacle_new.h  obstacle_rect.cpp  rect.h  rectangle.h
source/soccer/plays/: corner_their_global.cpp  halt.cpp  kickoff_their_one_wall.cpp  kickoff_us_chip.cpp  kickoff_us_pass.cpp  normal_play.cpp  normal_play_att.cpp  normal_play_def.cpp  penalty_their_simple.cpp  penalty_us_shootout.cpp  place_ball.cpp  play.h  play_book.h  stop.cpp  stop.h  stop_def.cpp  strategy.cpp  strategy_maker.cpp  tech_khers.cpp  their_place_ball.cpp  throwin_chip_shoot.cpp
source/soccer/robot/: motion_plan.cpp  navigation.cpp  robot.cpp  robot.h  set_obstacles.cpp  trapezoid.cpp  trapezoid.h  velocity_profile.h
source/soccer/skills/: attacker.cpp  circle_ball.cpp  def_2018.cpp  def_hi.cpp  defence_wall.cpp  defence_wall.h  dribble_to_direction.cpp  dribble_to_direction.h  gk_hi.cpp  halt.cpp  halt.h  intercept_ball.cpp  intercept_ball.h  kick_ball.cpp  kick_ball.h  mark.cpp  mark.h  mark_to_ball.cpp  mark_to_ball.h  mark_to_goal.cpp  (+21 more)
source/strategy/: CMakeLists.txt  application.h  frame.cpp  frame.h  frame.ui  gui.cpp  gui.h  main.cpp  pch.h  robot.cpp  robot.h  stm.pro  strategy.cpp  strategy.h  sync_data.h  syncdata.cpp  syncdata.h  waypoint.cpp  waypoint.h
source/vision/: CMakeLists.txt  pch.h  vision.cpp  vision.h  vision_ball.cpp  vision_comminucation.cpp  vision_communication.cpp  vision_param.cpp  vision_robot.cpp
vcpkg-ports/homog2d/: CMakeLists.txt  portfile.cmake  vcpkg.json
vcpkg-ports/rlimgui/: CMakeLists.txt  portfile.cmake  vcpkg.json
(+128 files in other folders)
